# pomodoro-assistant

./: .gitignore  CLAUDE.md  README.md  main.py  pomodoro.spec  pyproject.toml
installer/: pomodoro_assistant.iss
src/backend/: audio_manager.py  database.py  settings_manager.py  stopwatch_core.py  timer_core.py  todo_manager.py
src/frontend/: DrawerWidget.py  PillWidget.py  components.py  pill_widget.py  pomodoro_ui.py  settings_ui.py  stats_ui.py  stopwatch_ui.py  todo_ui.py
src/styles/: theme.py
tools/: make_icon.py
